syntax = "proto3";

package org.hse.torrent.services;


service ClientService {
  rpc statQuery (statQueryRequest) returns (statQueryResponse);
  rpc getQuery (getQueryRequest) returns (getQueryResponse);
}

message statQueryRequest {
  //    <1: Byte> <id: Int>,
  int32 id = 1;  //идентификатор файла
}

message statQueryResponse {
  //    <count: Int> (<part: Int>)*,
  int32  count = 1; //количество доступных частей
  int32  part = 2; //номер части
}

message getQueryRequest {
  //    <2: Byte> <id: Int> <part: Int>
  int32 id = 1; //идентификатор файла,
  int32 part = 2; //номер части

}

message getQueryResponse {
  //    <content: Bytes>,
  bytes  content = 1;//содержимое части
}
